update text search

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
@@ -24,7 +24,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://winlordz.github.io",
+  "homepage": "https://winlordz.github.io/fakeflix",
   "browserslist": {
     "production": [
       ">0.2%",
